--- a/lesson-3_pruning_and_sparsity/exercise_1/solution/solution.ipynb
+++ b/lesson-3_pruning_and_sparsity/exercise_1/solution/solution.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "553eb726",
+   "metadata": {},
+   "source": [
+    "# Import Required Libraries\n",
+    "This cell:\n",
+    "- Imports standard libraries for file handling, timing, and mathematical operations.\n",
+    "- Imports PyTorch for deep learning operations and pruning utilities.\n",
+    "- Imports Hugging Face Transformers for model and tokenizer handling."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "851cb58b-1175-45d8-9113-9869ca6cfed4",
@@ -14,6 +26,19 @@
     "import torch.nn as nn\n",
     "import torch.nn.utils.prune as prune\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0af7b2d8",
+   "metadata": {},
+   "source": [
+    "# Define Model and Evaluation Settings\n",
+    "This cell:\n",
+    "- Specifies the model name to be used for pruning and evaluation.\n",
+    "- Defines the fraction of neurons to prune in the MLP layers (`MLP_PRUNE_FRAC`).\n",
+    "- Sets the maximum number of tokens to generate during inference.\n",
+    "- Provides sample texts for benchmarking latency, throughput, and perplexity."
    ]
   },
   {
@@ -37,6 +62,19 @@
     "    \"define the field as the study of intelligent agents: any system that perceives \"\n",
     "    \"its environment and takes actions that maximize its chance of achieving its goals.\"\n",
     ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1eb75c67",
+   "metadata": {},
+   "source": [
+    "# Load Model and Tokenizer\n",
+    "This function:\n",
+    "- Loads the tokenizer and model using Hugging Face Transformers.\n",
+    "- Configures the model to use FP16 precision for faster inference.\n",
+    "- Moves the model to the specified device (CPU or GPU).\n",
+    "- Sets the model to evaluation mode to disable gradient computations."
    ]
   },
   {
@@ -64,6 +102,22 @@
     "    model = model.to(device)\n",
     "    model.eval()\n",
     "    return tokenizer, model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97e3bb63",
+   "metadata": {},
+   "source": [
+    "# Measure Baseline Performance\n",
+    "This function:\n",
+    "- Measures the baseline performance of the model before pruning.\n",
+    "- Evaluates:\n",
+    "  - **Latency**: Time taken to generate tokens for a given prompt.\n",
+    "  - **Throughput**: Tokens generated per second.\n",
+    "  - **Peak GPU Memory Usage**: Maximum memory used during inference.\n",
+    "  - **Perplexity**: A measure of how well the model predicts the given text.\n",
+    "- Prints the baseline metrics for comparison with the pruned model."
    ]
   },
   {
@@ -98,6 +152,21 @@
     "        \"peak_gpu_mem\": peak_mem,\n",
     "        \"perplexity\": perplexity\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "330f5a15",
+   "metadata": {},
+   "source": [
+    "# Prune MLP Rows and Columns\n",
+    "This function:\n",
+    "- Prunes the MLP layers in the model by:\n",
+    "  - Zeroing out a fraction of rows in the `gate_proj` and `up_proj` layers.\n",
+    "  - Zeroing out the corresponding columns in the `down_proj` layer.\n",
+    "- Uses structured pruning to remove entire rows or columns.\n",
+    "- Ensures pruning is performed on the CPU to avoid GPU memory issues.\n",
+    "- Removes the pruning reparameterizations after applying the masks."
    ]
   },
   {
@@ -149,6 +218,20 @@
     "\n",
     "    # 3) Return the model (now with zeros in place)\n",
     "    return model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab1ba705",
+   "metadata": {},
+   "source": [
+    "# Rebuild MLP Blocks\n",
+    "This function:\n",
+    "- Reconstructs the pruned MLP layers with reduced dimensions.\n",
+    "- Identifies the neurons that were not pruned in the `gate_proj` layer.\n",
+    "- Creates new `nn.Linear` modules for `gate_proj`, `up_proj`, and `down_proj` with updated dimensions.\n",
+    "- Copies the weights and biases from the original layers to the new layers.\n",
+    "- Replaces the old modules with the new ones in the model."
    ]
   },
   {
@@ -224,6 +307,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1eb3b715",
+   "metadata": {},
+   "source": [
+    "# Measure Performance After Rebuilding\n",
+    "This function:\n",
+    "- Evaluates the performance of the rebuilt model after pruning and reconstruction.\n",
+    "- Measures:\n",
+    "  - **Latency**: Time taken to generate tokens for a given prompt.\n",
+    "  - **Throughput**: Tokens generated per second.\n",
+    "  - **Peak GPU Memory Usage**: Maximum memory used during inference.\n",
+    "  - **Perplexity**: A measure of how well the model predicts the given text.\n",
+    "- Prints the metrics for comparison with the baseline model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "79f5c2f5-9541-42e1-8389-dcd1b216add7",
@@ -267,6 +366,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d350c8c",
+   "metadata": {},
+   "source": [
+    "# Save Model and Report Size\n",
+    "This function:\n",
+    "- Saves the pruned and rebuilt model to the specified output directory.\n",
+    "- Calculates the total size of the saved model files on disk.\n",
+    "- Prints the on-disk size of the model for comparison with the original model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "3b5cde41-77ee-4339-a06c-6fe825e6ad89",
@@ -297,6 +408,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ab775d2",
+   "metadata": {},
+   "source": [
+    "# Main Execution Flow\n",
+    "This function:\n",
+    "- Loads the model and tokenizer.\n",
+    "- Measures the baseline performance of the model.\n",
+    "- Applies structured pruning to the MLP layers.\n",
+    "- Rebuilds the pruned MLP layers with reduced dimensions.\n",
+    "- Measures the performance of the rebuilt model.\n",
+    "- Saves the pruned and rebuilt model to disk and reports its size."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "77c3803f-9b33-42b3-a1cf-0891f0ea130b",
@@ -321,6 +447,17 @@
     "\n",
     "    # Save & report on-disk size\n",
     "    save_and_report_size(model, \"llama_pruned_rebuilt\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a0be5e3",
+   "metadata": {},
+   "source": [
+    "# Start the Pruning and Evaluation Process\n",
+    "This cell:\n",
+    "- Calls the `start` function to execute the entire pruning and evaluation pipeline.\n",
+    "- Outputs the baseline and post-pruning metrics, as well as the on-disk size of the pruned model."
    ]
   },
   {
