--- a/lesson-3_pruning_and_sparsity/exercise_2/solution/solution.ipynb
+++ b/lesson-3_pruning_and_sparsity/exercise_2/solution/solution.ipynb
@@ -5,7 +5,6 @@
    "id": "1bcca3d6",
    "metadata": {},
    "source": [
-    "\n",
     "# Qwen2‑VL Demo + Exercises (Starter Notebook)\n",
     "\n",
     "This notebook includes:\n",
@@ -22,30 +21,13 @@
    "id": "88dbaefb",
    "metadata": {},
    "source": [
-    "## 0) Setup (Installs & GPU)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "07de15ac",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[33mWARNING: Ignoring invalid distribution ~orch (/opt/conda/lib/python3.11/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution ~orch (/opt/conda/lib/python3.11/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m\u001b[33mWARNING: Ignoring invalid distribution ~orch (/opt/conda/lib/python3.11/site-packages)\u001b[0m\u001b[33m\n",
-      "\u001b[0m"
-     ]
-    }
-   ],
-   "source": [
+    "## 0) Setup (Installs & GPU)\n",
     "\n",
-    "# If torch/torchvision already installed, you can skip this pip line.\n",
-    "!pip -q install \"transformers>=4.43.3\" \"accelerate>=0.32.0\" \"peft>=0.11.1\" \"datasets\" \"pillow\" \"torchvision\"\n"
+    "This cell:\n",
+    "- Sets up the environment for the notebook.\n",
+    "- Prints the versions of PyTorch, CUDA, and Python.\n",
+    "- Checks if a GPU is available and prints its name.\n",
+    "- Sets a random seed for reproducibility."
    ]
   },
   {
@@ -84,7 +66,17 @@
    "id": "edcb88bc",
    "metadata": {},
    "source": [
-    "## 1) Imports & Config"
+    "## 1) Imports & Config\n",
+    "\n",
+    "This cell:\n",
+    "- Imports libraries for image processing, model configuration, and training.\n",
+    "- Defines key configuration parameters:\n",
+    "  - `MODEL_NAME`: The name of the model to load.\n",
+    "  - `PRUNE_MODE`: The pruning strategy (attention heads or FFN channels).\n",
+    "  - `PRUNE_RATIO`: The percentage of components to prune.\n",
+    "  - `USE_FP32`: Whether to use FP32 precision (default is FP16 for T4 GPUs).\n",
+    "- Sets learning rate, batch size, and other training parameters.\n",
+    "- Creates an output directory for saving results."
    ]
   },
   {
@@ -138,6 +130,21 @@
     "config    = AutoConfig.from_pretrained(MODEL_NAME, trust_remote_code=True)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad481a54",
+   "metadata": {},
+   "source": [
+    "## Load Model\n",
+    "\n",
+    "This cell:\n",
+    "- Loads the Qwen2-VL model with the specified precision (FP16 or FP32).\n",
+    "- Handles out-of-memory errors by falling back to FP16 if necessary.\n",
+    "- Enables gradient checkpointing to save memory during training.\n",
+    "- Extracts key model dimensions such as hidden size, number of attention heads, and intermediate size.\n",
+    "- Prints the total number of parameters in the model."
    ]
   },
   {
@@ -201,7 +208,15 @@
    "id": "d4b8e728",
    "metadata": {},
    "source": [
-    "## 2) Pruning Utilities"
+    "## 2) Pruning Utilities\n",
+    "\n",
+    "This section:\n",
+    "- Defines utility functions to locate specific modules in the model:\n",
+    "  - `find_attn_modules`: Finds attention modules with Q, K, V, and O projections.\n",
+    "  - `find_mlp_modules`: Finds MLP modules with gate, up, and down projections.\n",
+    "- Implements pruning utilities for attention heads and FFN channels:\n",
+    "  - `prune_attention_heads_logical_gqa`: Prunes attention heads while maintaining GQA (Grouped Query Attention) constraints.\n",
+    "  - `prune_ffn_channels_logical_mask`: Prunes FFN channels by masking weights based on their norms."
    ]
   },
   {
@@ -322,7 +337,18 @@
    "id": "d4680346",
    "metadata": {},
    "source": [
-    "## 3) CIFAR‑10 → VQA data (EOS‑supervised answers)"
+    "## 3) CIFAR‑10 → VQA Data (EOS‑Supervised Answers)\n",
+    "\n",
+    "This section:\n",
+    "- Prepares a toy dataset using CIFAR-10 images and their labels.\n",
+    "- Resizes images to 448x448 pixels to match the model's input size.\n",
+    "- Creates training and validation datasets with a fixed number of examples.\n",
+    "- Each example includes:\n",
+    "  - An image.\n",
+    "  - A question (\"What is in this image?\").\n",
+    "  - The answer (e.g., \"cat\") with and without an EOS token.\n",
+    "- Encodes the dataset for visual question answering (VQA) tasks.\n",
+    "- Masks labels to supervise only the answer tokens."
    ]
   },
   {
@@ -485,7 +511,13 @@
    "id": "ebccde14",
    "metadata": {},
    "source": [
-    "## 4) Baseline Eval Helpers"
+    "## 4) Baseline Eval Helpers\n",
+    "\n",
+    "This section:\n",
+    "- Defines helper functions for evaluating the model:\n",
+    "  - `eval_loss`: Computes the perplexity of the model on the training dataset.\n",
+    "  - `eval_gen_accuracy`: Evaluates the model's generation accuracy on the validation dataset.\n",
+    "- Runs a quick baseline evaluation to measure perplexity and accuracy before pruning."
    ]
   },
   {
@@ -587,7 +619,13 @@
    "id": "4a64c66d",
    "metadata": {},
    "source": [
-    "## 5) Apply Pruning"
+    "## 5) Apply Pruning\n",
+    "\n",
+    "This cell:\n",
+    "- Applies pruning to the model based on the selected mode (`PRUNE_MODE`):\n",
+    "  - `attn_heads`: Prunes attention heads.\n",
+    "  - `ffn_channels`: Prunes FFN channels.\n",
+    "- Evaluates the model's perplexity after pruning but before fine-tuning."
    ]
   },
   {
@@ -631,7 +669,16 @@
    "id": "a2075caf",
    "metadata": {},
    "source": [
-    "## 6) LoRA Setup & Tiny Fine‑Tune"
+    "## 6) LoRA Setup & Tiny Fine‑Tune\n",
+    "\n",
+    "This section:\n",
+    "- Identifies target modules for LoRA (Low-Rank Adaptation).\n",
+    "- Configures LoRA parameters such as rank, alpha, and dropout.\n",
+    "- Wraps the model with LoRA layers for fine-tuning.\n",
+    "- Implements a fine-tuning loop with mixed precision (FP16).\n",
+    "- Uses gradient accumulation to simulate a larger batch size.\n",
+    "- Updates the optimizer and learning rate scheduler after each step.\n",
+    "- Prints the loss at each step for monitoring."
    ]
   },
   {
@@ -771,7 +818,12 @@
    "id": "189009c2",
    "metadata": {},
    "source": [
-    "## 7) Inference Demo (Greedy)"
+    "## 7) Inference Demo (Greedy)\n",
+    "\n",
+    "This section:\n",
+    "- Demonstrates the model's ability to answer visual questions after fine-tuning.\n",
+    "- Defines a function to generate answers for images and questions.\n",
+    "- Runs the model on a few examples from the validation dataset and prints the predictions."
    ]
   },
   {
@@ -861,7 +913,14 @@
    "id": "f252fbe0",
    "metadata": {},
    "source": [
-    "## Exercise A — Constrained Decoding (Candidate Scoring)"
+    "## Exercise A — Constrained Decoding (Candidate Scoring)\n",
+    "\n",
+    "This exercise:\n",
+    "- Implements constrained decoding by scoring each candidate answer using log-prob aggregation.\n",
+    "- Defines functions to:\n",
+    "  - `score_answer_logprob`: Compute the log-probability of a candidate answer given the input.\n",
+    "  - `predict_with_candidates`: Select the best candidate answer based on log-probability scores.\n",
+    "- Tests the implementation with a smoke test."
    ]
   },
   {
@@ -996,24 +1055,16 @@
    "id": "be6e91e8",
    "metadata": {},
    "source": [
-    "## Exercise B — Pruning Ablation (Quality & Speed)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d19907ef",
-   "metadata": {},
-   "source": [
+    "## Exercise B — Pruning Ablation (Quality & Speed)\n",
     "\n",
-    "**Goal:** Compare `ffn_channels` vs `attn_heads` at ratios (0.15, 0.30). Report:\n",
-    "- Train PPL (no LoRA fine‑tune for speed)\n",
-    "- Images/sec using your candidate predictor from Exercise A on ~64 samples\n",
-    "\n",
-    "Implement:\n",
-    "- `apply_pruning(model, mode, ratio)`\n",
-    "- `measure_decode_ips(model, processor, val_loader, n_samples=64)`\n",
-    "\n",
-    "Use a **fresh** base model for each setting via `load_model(dtype)`.\n"
+    "This exercise:\n",
+    "- Compares the impact of pruning FFN channels vs attention heads at different ratios.\n",
+    "- Measures:\n",
+    "  - Perplexity on the training dataset.\n",
+    "  - Images per second during inference using the candidate predictor from Exercise A.\n",
+    "- Defines functions to:\n",
+    "  - `apply_pruning`: Apply pruning to the model based on the specified mode and ratio.\n",
+    "  - `measure_decode_ips`: Measure the inference speed in images per second."
    ]
   },
   {
@@ -1221,25 +1272,17 @@
    "id": "0ed6853b",
    "metadata": {},
    "source": [
-    "## Exercise C — Prompt / EOS Ablation (Repetition vs Accuracy)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "470f4861",
-   "metadata": {},
-   "source": [
+    "## Exercise C — Prompt / EOS Ablation (Repetition vs Accuracy)\n",
     "\n",
-    "**Goal:** Show why adding EOS to the supervised answer helps reduce repetition.\n",
-    "\n",
-    "Implement:\n",
-    "- `make_examples_with_eos_flag(ds, n_take, use_eos)`\n",
-    "- `compute_repetition_rate(texts)`\n",
-    "\n",
-    "Suggested quick protocol:\n",
-    "1) Build two small validation sets (e.g., 60 samples) with `use_eos=True/False`.\n",
-    "2) Evaluate greedy decoding on both with your merged model.\n",
-    "3) Compare accuracy and repetition rate.\n"
+    "This exercise:\n",
+    "- Evaluates the impact of including an EOS token in supervised answers.\n",
+    "- Measures:\n",
+    "  - Repetition rate in generated text.\n",
+    "  - Accuracy of predictions with and without the EOS token.\n",
+    "- Defines functions to:\n",
+    "  - `make_examples_with_eos_flag`: Create datasets with and without EOS tokens.\n",
+    "  - `compute_repetition_rate`: Calculate the repetition rate in generated text.\n",
+    "- Compares the results for both settings."
    ]
   },
   {
