--- a/lesson-4_profiling_tools_and_performance_analysis/demo-2/demo.ipynb
+++ b/lesson-4_profiling_tools_and_performance_analysis/demo-2/demo.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "89bc564b",
+   "metadata": {},
+   "source": [
+    "# 🚀 Import Required Libraries\n",
+    "This cell:\n",
+    "- Imports essential libraries for PyTorch operations, pruning, and quantization.\n",
+    "- Imports Hugging Face Transformers for model and tokenizer handling.\n",
+    "- Imports PyTorch Profiler for performance analysis."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e67f2abd-0fa2-4927-a7f4-a5e7e4e41a21",
@@ -14,6 +26,20 @@
     "import torch.quantization as tq\n",
     "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
     "from torch.profiler import profile, record_function, ProfilerActivity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c471339",
+   "metadata": {},
+   "source": [
+    "# 🔧 Define Model and Profiling Settings\n",
+    "This cell:\n",
+    "- Specifies the model name to be used for pruning and profiling.\n",
+    "- Defines the pruning amount (`PRUNE_AMOUNT`) as 30%.\n",
+    "- Sets the batch size and maximum number of tokens to generate during inference.\n",
+    "- Provides a sample prompt for benchmarking.\n",
+    "- Specifies the directory to save profiler logs for the baseline model."
    ]
   },
   {
@@ -32,6 +58,20 @@
     "    \"large language models efficiently is crucial for both research and deployment.\"\n",
     ")\n",
     "LOGDIR_BASELINE = \"./profiler_logs/baseline\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e728fd4",
+   "metadata": {},
+   "source": [
+    "# 📦 Load Model and Tokenizer\n",
+    "This function:\n",
+    "- Loads the tokenizer and model using Hugging Face Transformers.\n",
+    "- Configures the model to use FP32 precision for accurate profiling.\n",
+    "- Moves the model to the specified device (CPU or GPU).\n",
+    "- Sets the model to evaluation mode to disable gradient computations.\n",
+    "- Returns the loaded tokenizer and model."
    ]
   },
   {
@@ -67,6 +107,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "950435f7",
+   "metadata": {},
+   "source": [
+    "# 📝 Create a Batch of Inputs\n",
+    "This function:\n",
+    "- Duplicates the provided prompt `BATCH_SIZE` times to simulate a batch of inputs.\n",
+    "- Tokenizes the batch with padding and truncation to ensure uniform input size.\n",
+    "- Moves the tokenized inputs to the specified device (CPU or GPU).\n",
+    "- Returns the prepared batch of inputs."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "fcaecfae-66b7-46bf-9d62-213ecfbfe153",
@@ -96,6 +149,25 @@
     "    inputs = {k: v.to(device) for k, v in inputs.items()}\n",
     "\n",
     "    return inputs\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34d51daa",
+   "metadata": {},
+   "source": [
+    "# 📊 Profile Inference\n",
+    "This function:\n",
+    "- Profiles the model's inference performance using PyTorch Profiler.\n",
+    "- Captures:\n",
+    "  - CPU and CUDA activity.\n",
+    "  - Memory usage.\n",
+    "  - Operator-level performance metrics.\n",
+    "- Saves the profiling traces to the specified log directory for visualization in TensorBoard.\n",
+    "- Prints:\n",
+    "  - Top-3 operators by CPU self-time.\n",
+    "  - Top-3 operators by CUDA self-time.\n",
+    "  - Total CPU and CUDA self-times in milliseconds."
    ]
   },
   {
@@ -156,6 +228,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0efd98de",
+   "metadata": {},
+   "source": [
+    "# ✂️ Apply Pruning and Quantization\n",
+    "This function:\n",
+    "- Applies unstructured magnitude-based pruning to all `nn.Linear` layers in the model.\n",
+    "  - Prunes 30% of the smallest-magnitude weights.\n",
+    "  - Makes the pruning masks permanent.\n",
+    "- Dynamically quantizes the pruned model to 8-bit integers (`torch.qint8`) for efficient inference.\n",
+    "- Returns the pruned and quantized model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "e8da2b96-d032-4652-9cce-2371abb33ae7",
@@ -190,6 +276,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a36030bf",
+   "metadata": {},
+   "source": [
+    "# 🚦 Start the Profiling Process\n",
+    "This function:\n",
+    "- Loads the model and tokenizer.\n",
+    "- Creates a batch of inputs using the provided prompt.\n",
+    "- Profiles the baseline model's inference performance.\n",
+    "- Saves the profiling results to the specified log directory."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "e7058668-777e-4a34-9cc5-c499064891e3",
@@ -204,6 +303,17 @@
     "    batch_inputs     = make_batch(tokenizer, PROMPT, device)\n",
     "    print(\"Profiling inference…\")\n",
     "    profile_inference(model, batch_inputs, LOGDIR_BASELINE, label=\"Baseline\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f43c0542",
+   "metadata": {},
+   "source": [
+    "# ▶️ Run the Profiling Pipeline\n",
+    "This cell:\n",
+    "- Calls the `start` function to execute the profiling pipeline.\n",
+    "- Outputs the profiling results, including operator-level performance metrics and total CPU/CUDA self-times."
    ]
   },
   {
