--- a/lesson-4_profiling_tools_and_performance_analysis/exercise_1/solution/solution.ipynb
+++ b/lesson-4_profiling_tools_and_performance_analysis/exercise_1/solution/solution.ipynb
@@ -5,14 +5,18 @@
    "id": "b8563c42",
    "metadata": {},
    "source": [
-    "# Exercise 1 — **Solution Notebook** (Built on the Demo)\n",
+    "# 🏋️ Exercise 1 — **Solution Notebook** (Built on the Demo)\n",
     "\n",
     "This is the **worked solution** that *extends* the demo rather than repeating it.\n",
     "All original demo cells appear **below** unchanged. The solution tasks are implemented\n",
     "in the new cells you see **above** the demo.\n",
-    "\n",
-    "**Generated:** 2025-08-24 19:57:12  \n",
-    "**Scope:** CIFAR‑10 loaders with knobs, quick training/eval, model comparison, profiler→TensorBoard, and ablations.\n"
+    " \n",
+    "**Scope:** \n",
+    "- CIFAR‑10 loaders with knobs.\n",
+    "- Quick training/evaluation loops.\n",
+    "- Model comparison.\n",
+    "- Profiling with TensorBoard.\n",
+    "- Ablations for batch size and `num_workers`."
    ]
   },
   {
@@ -20,9 +24,12 @@
    "id": "99a5461f",
    "metadata": {},
    "source": [
-    "## Setup\n",
+    "## 🛠️ Setup\n",
     "\n",
-    "This cell imports PyTorch, TorchVision, and utility packages used across all tasks.\n"
+    "This cell:\n",
+    "- Imports PyTorch, TorchVision, and utility packages used across all tasks.\n",
+    "- Sets the device to GPU if available, otherwise defaults to CPU.\n",
+    "- Prints the device being used for the notebook."
    ]
   },
   {
@@ -75,11 +82,15 @@
    "id": "12659a92",
    "metadata": {},
    "source": [
-    "## Task A — Central knobs for DataLoaders (batch size, num_workers)\n",
+    "## Task A — 🔄 Central Knobs for DataLoaders (Batch Size, Num Workers)\n",
     "\n",
-    "We build **reusable CIFAR‑10 dataloaders** and expose knobs via `set_ex1_dataloader_params`.\n",
-    "If your demo already defines loaders, you can *ignore them* and just use these solution loaders,\n",
-    "or adapt the function to call your demo's builder.\n"
+    "This section:\n",
+    "- Builds reusable CIFAR‑10 DataLoaders with configurable batch size and number of workers.\n",
+    "- Defines:\n",
+    "  - `_ex1_build_datasets`: Creates CIFAR‑10 training and test datasets with standard normalization.\n",
+    "  - `_ex1_build_loaders`: Builds DataLoaders for the datasets.\n",
+    "  - `set_ex1_dataloader_params`: Updates DataLoader parameters and rebuilds the loaders.\n",
+    "- Ensures flexibility for experimentation with different DataLoader configurations."
    ]
   },
   {
@@ -166,12 +177,15 @@
    "id": "d29c577a",
    "metadata": {},
    "source": [
-    "## Utility — Small model zoo and quick train/eval\n",
+    "## Utility — 🧩 Small Model Zoo and Quick Train/Eval\n",
     "\n",
-    "We define:\n",
-    "- `get_ex1_model(name)` — small torchvision models with `num_classes=10`.\n",
-    "- `ex1_train_one_epoch` and `ex1_eval_one_epoch` — quick loops with `max_steps` for short runs.\n",
-    "- Both compute simple throughput metrics.\n"
+    "This section:\n",
+    "- Provides utility functions for training and evaluating models.\n",
+    "- Defines:\n",
+    "  - `get_ex1_model`: Loads small models like ResNet-18, ResNet-34, or MobileNetV2 with 10 output classes.\n",
+    "  - `ex1_train_one_epoch`: Trains the model for one epoch with optional step limits for quick runs.\n",
+    "  - `ex1_eval_one_epoch`: Evaluates the model for one epoch, computing accuracy and throughput.\n",
+    "- Measures throughput in samples per second for both training and evaluation."
    ]
   },
   {
@@ -263,9 +277,12 @@
    "id": "ee01522c",
    "metadata": {},
    "source": [
-    "### Quick smoke run (Task A deliverable)\n",
+    "### 🚀 Quick Smoke Run (Task A Deliverable)\n",
     "\n",
-    "One short train/eval to confirm everything is wired. We cap steps so it’s fast.\n"
+    "This cell:\n",
+    "- Runs a short training and evaluation loop to verify that the DataLoaders and model are working correctly.\n",
+    "- Limits the number of steps to ensure the run is quick.\n",
+    "- Prints training and validation statistics, including loss, throughput, and latency."
    ]
   },
   {
@@ -304,10 +321,12 @@
    "id": "6996e1d2",
    "metadata": {},
    "source": [
-    "## Task B — Add a second model and compare\n",
+    "## Task B — 🆚 Add a Second Model and Compare\n",
     "\n",
-    "We compare `resnet18` vs `resnet34` (you can swap in `mobilenet_v2` if you prefer).\n",
-    "Each uses the exact same pipeline.\n"
+    "This section:\n",
+    "- Compares the performance of two models (`resnet18` and `resnet34`) using the same pipeline.\n",
+    "- Measures training and evaluation metrics for both models.\n",
+    "- Returns a dictionary containing the results for each model."
    ]
   },
   {
@@ -365,10 +384,17 @@
    "id": "6847bf2f",
    "metadata": {},
    "source": [
-    "## Task C — PyTorch Profiler → TensorBoard (top ops)\n",
+    "## Task C — 📊 PyTorch Profiler → TensorBoard (Top Ops)\n",
     "\n",
-    "We wrap a very short training loop with the profiler and export traces to TensorBoard.\n",
-    "Open TensorBoard and navigate to **Profile → Operator View** to see top ops.\n"
+    "This section:\n",
+    "- Profiles the training loop using PyTorch Profiler.\n",
+    "- Saves profiling traces to TensorBoard for visualization.\n",
+    "- Captures:\n",
+    "  - Operator-level performance metrics.\n",
+    "  - CUDA and CPU activity.\n",
+    "  - Memory usage.\n",
+    "- Prints the top operators by total CUDA or CPU time.\n",
+    "- Provides a path to the TensorBoard logs for further analysis."
    ]
   },
   {
@@ -473,9 +499,12 @@
    "id": "a98999c2",
    "metadata": {},
    "source": [
-    "## Task D — Ablations: Batch size & `num_workers`\n",
+    "## Task D — 🔬 Ablations: Batch Size & `num_workers`\n",
     "\n",
-    "We sweep a few configurations and measure throughput quickly.\n"
+    "This section:\n",
+    "- Sweeps through different configurations of batch size and number of workers.\n",
+    "- Measures training and validation throughput for each configuration.\n",
+    "- Returns the results as a pandas DataFrame for easy analysis."
    ]
   },
   {
@@ -571,6 +600,18 @@
     "\n",
     "df_abl = ex1_ablate(configs=((64,2),(128,2),(128,4)), max_steps=20)\n",
     "df_abl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c18c3486",
+   "metadata": {},
+   "source": [
+    "## 🔍 Launch TensorBoard\n",
+    "\n",
+    "This cell:\n",
+    "- Launches TensorBoard to visualize the profiling traces saved in the `./runs/ex1_solution` directory.\n",
+    "- Opens TensorBoard on port 6006, accessible via the host's browser."
    ]
   },
   {
