Added measure_latency function

--- a/lesson-3_pruning_and_sparsity/exercise_1/solution/solution.ipynb
+++ b/lesson-3_pruning_and_sparsity/exercise_1/solution/solution.ipynb
@@ -122,6 +122,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7273e561",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def measure_latency_and_throughput(model, tokenizer, prompt: str, device: torch.device, max_new_tokens=50, runs=3):\n",
+    "    \"\"\"\n",
+    "    Measure latency and throughput for text generation.\n",
+    "\n",
+    "    Args:\n",
+    "        model: The language model to evaluate.\n",
+    "        tokenizer: The tokenizer associated with the model.\n",
+    "        prompt (str): Input prompt for text generation.\n",
+    "        device (torch.device): Device to run the model on.\n",
+    "        max_new_tokens (int): Maximum number of new tokens to generate.\n",
+    "        runs (int): Number of runs for averaging metrics.\n",
+    "\n",
+    "    Returns:\n",
+    "        tuple: Average latency (seconds) and throughput (tokens per second).\n",
+    "    \"\"\"\n",
+    "    model.eval()\n",
+    "    inputs = tokenizer(prompt, return_tensors=\"pt\", padding=True, truncation=True).to(device)\n",
+    "\n",
+    "    # Warmup\n",
+    "    with torch.inference_mode():\n",
+    "        _ = model.generate(**inputs, max_new_tokens=8)\n",
+    "\n",
+    "    latencies = []\n",
+    "    throughputs = []\n",
+    "    for _ in range(runs):\n",
+    "        if device.type == \"cuda\":\n",
+    "            torch.cuda.synchronize()\n",
+    "        t0 = time.perf_counter()\n",
+    "        with torch.inference_mode():\n",
+    "            outputs = model.generate(**inputs, max_new_tokens=max_new_tokens)\n",
+    "        if device.type == \"cuda\":\n",
+    "            torch.cuda.synchronize()\n",
+    "        t1 = time.perf_counter()\n",
+    "\n",
+    "        gen_len = outputs.shape[1] - inputs[\"input_ids\"].shape[1]\n",
+    "        latency = t1 - t0\n",
+    "        throughput = gen_len / latency if latency > 0 else float(\"nan\")\n",
+    "\n",
+    "        latencies.append(latency)\n",
+    "        throughputs.append(throughput)\n",
+    "\n",
+    "    avg_latency = sum(latencies) / len(latencies)\n",
+    "    avg_throughput = sum(throughputs) / len(throughputs)\n",
+    "    return avg_latency, avg_throughput"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "39e97ed4-3031-452c-b3d9-7d79afa84e14",
    "metadata": {},
