--- a/lesson-1_introduction_to_model_optimization/demo-2/demo.ipynb
+++ b/lesson-1_introduction_to_model_optimization/demo-2/demo.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# Settings\n",
-    "MODEL_NAME = \"meta-llama/Llama-3-2b-text-only\"  # or 1B variant\n",
+    "MODEL_NAME = \"TinyLlama/TinyLlama-1.1B-Chat-v1.0\"  \n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "MAX_NEW_TOKENS = 50"
    ]
