Added instructions for bigger instance

--- a/lesson-4_profiling_tools_and_performance_analysis/demo-2/demo.ipynb
+++ b/lesson-4_profiling_tools_and_performance_analysis/demo-2/demo.ipynb
@@ -13,6 +13,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2d34575b",
+   "metadata": {},
+   "source": [
+    "### Note\n",
+    "\n",
+    "Part 2 of the demo requires a high-performance instance. We recommend running it on your personal workstation or provisioning a suitable cloud instance. On AWS, a g4dn.4xlarge instance is sufficient.\n",
+    "\n",
+    "#### Recommended Specifications:\n",
+    "\n",
+    "- vCPUs: 16\n",
+    "- GPU: 1 × NVIDIA T4 (16 GB VRAM)\n",
+    "- Memory (RAM): 64 GB\n",
+    "- Storage: At least 150 GB available (preferably SSD)\n",
+    "- CUDA / GPU Drivers: CUDA 11.8 or later"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "e67f2abd-0fa2-4927-a7f4-a5e7e4e41a21",
