--- a/lesson-3_pruning_and_sparsity/demo-1/demo.ipynb
+++ b/lesson-3_pruning_and_sparsity/demo-1/demo.ipynb
@@ -18,6 +18,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "01125542",
+   "metadata": {},
+   "source": [
+    "### Note\n",
+    "\n",
+    "Part 2 of the demo requires a high-performance instance. We recommend running it on your personal workstation or provisioning a suitable cloud instance. On AWS, a g4dn.4xlarge instance is sufficient.\n",
+    "\n",
+    "#### Recommended Specifications:\n",
+    "\n",
+    "- vCPUs: 16\n",
+    "- GPU: 1 × NVIDIA T4 (16 GB VRAM)\n",
+    "- Memory (RAM): 64 GB\n",
+    "- Storage: At least 150 GB available (preferably SSD)\n",
+    "- CUDA / GPU Drivers: CUDA 11.8 or later"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "74ef4b36",
@@ -450,7 +468,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -464,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
