Added tensorboard instructions

--- a/lesson-4_profiling_tools_and_performance_analysis/exercise_1/solution/solution.ipynb
+++ b/lesson-4_profiling_tools_and_performance_analysis/exercise_1/solution/solution.ipynb
@@ -611,7 +611,17 @@
     "\n",
     "This cell:\n",
     "- Launches TensorBoard to visualize the profiling traces saved in the `./runs/ex1_solution` directory.\n",
-    "- Opens TensorBoard on port 6006, accessible via the host's browser."
+    "- Opens TensorBoard on port 6006, accessible via the host's browser.\n",
+    "\n",
+    "### Launch TensorBoard from VS Code (UI way)\n",
+    "\n",
+    "- Open the project folder in VS Code.\n",
+    "\n",
+    "- Press `Ctrl/Cmd + Shift + P` → run “Python: Launch TensorBoard” (or “Launch TensorBoard”).\n",
+    "\n",
+    "- Choose your log directory (e.g., `runs/` or `logs/`), pick a port (default `6006`).\n",
+    "\n",
+    "- TensorBoard opens in an editor tab (or your browser)."
    ]
   },
   {
