--- a/lesson-4_profiling_tools_and_performance_analysis/exercise_1/starter/starter.ipynb
+++ b/lesson-4_profiling_tools_and_performance_analysis/exercise_1/starter/starter.ipynb
@@ -633,6 +633,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3118e060",
+   "metadata": {},
+   "source": [
+    "### Launch TensorBoard from VS Code (UI way)\n",
+    "\n",
+    "- Open the project folder in VS Code.\n",
+    "\n",
+    "- Press `Ctrl/Cmd + Shift + P` → run “Python: Launch TensorBoard” (or “Launch TensorBoard”).\n",
+    "\n",
+    "- Choose your log directory (e.g., `runs/` or `logs/`), pick a port (default `6006`).\n",
+    "\n",
+    "- TensorBoard opens in an editor tab (or your browser)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "7fa1d4a8-eb96-4a0f-878d-c820caf27df8",
