--- a/lesson-3_pruning_and_sparsity/demo-1/demo.ipynb
+++ b/lesson-3_pruning_and_sparsity/demo-1/demo.ipynb
@@ -24,14 +24,13 @@
    "source": [
     "### Note\n",
     "\n",
-    "Part 2 of the demo requires a high-performance instance. We recommend running it on your personal workstation or provisioning a suitable cloud instance. On AWS, a g4dn.4xlarge instance is sufficient.\n",
+    "The demo requires a high-performance instance. We recommend running it on your personal workstation or provisioning a suitable cloud instance. On AWS, a g4dn.4xlarge instance is sufficient.\n",
     "\n",
     "#### Recommended Specifications:\n",
     "\n",
     "- vCPUs: 16\n",
     "- GPU: 1 × NVIDIA T4 (16 GB VRAM)\n",
     "- Memory (RAM): 64 GB\n",
-    "- Storage: At least 150 GB available (preferably SSD)\n",
     "- CUDA / GPU Drivers: CUDA 11.8 or later"
    ]
   },
